refactor: replace String.format with formatted
Agent-Logs-Url: https://github.com/hazendaz/htmlcompressor-maven-plugin/sessions/b4bde639-84fc-44f1-a7aa-54af124fbd53

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>